# cookiecutter-python

./: README.md  cookiecutter.json  pyproject.toml  setup.cfg
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.dir_name}}/: LICENSE.txt  pyproject.toml
{{cookiecutter.dir_name}}/src/{{cookiecutter.lib_name}}/: __main__.py
{{cookiecutter.dir_name}}/tests/: test_{{cookiecutter.lib_name}}.py
{{cookiecutter.name}}/: README.{{cookiecutter.readme}}  noxfile.py  pyproject.toml
{{cookiecutter.name}}/src/{{cookiecutter.lib_name}}/: __main__.py
{{cookiecutter.name}}/tests/: test_{{cookiecutter.lib_name}}.py
{{cookiecutter.project_slug}}/: .gitlab-ci.yml  LICENSE.txt  README.{{cookiecutter.readme_format}}  noxfile.py  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/.github/workflows/: continuous_integration.yml  security_audit.yml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.module_name}}.py
