[tool.poetry]
name = "{{ cookiecutter.lib_name }}"
version = "0.1.0"
license = "{{ cookiecutter.license }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
readme = "README.{{ cookiecutter.readme }}"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python }}"

[tool.poetry.dev-dependencies]

{% if cookiecutter.template == "bin" -%}
[tool.poetry.scripts]
{{ cookiecutter.bin_name }} = "{{ cookiecutter.lib_name }}.__main__:main"

{% endif -%}
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
