[tool.poetry]
name = "{{ cookiecutter.module_name }}"
version = "0.1.0"
license = "{{ cookiecutter.license }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.{{ cookiecutter.readme_format }}"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]

{% if cookiecutter.project_kind == "bin" -%}
[tool.poetry.scripts]
{{ cookiecutter.script_name }} = "{{ cookiecutter.module_name }}.__main__:main"

{% endif -%}
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.pytest.ini_options]
testpaths = ["tests"]
